--- a/card-service/src/main/resources/application.properties
+++ b/card-service/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.application.name=card-service
 spring.datasource.url=jdbc:postgresql://localhost:5432/cardservice
 spring.datasource.username=jelle
 spring.datasource.password=admin
+spring.datasource.driverClassName=org.postgresql.Driver
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
