--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,15 +10,16 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-order-service:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: ctions/setup-java@v1.4.3
       with:
         java-version: 11
     - name: Build with Maven
+      working-directory: ./cah/card-service
       run: mvn -B package --file pom.xml
