--- a/.github/workflows/card-service.yml
+++ b/.github/workflows/card-service.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
+name: Card Service CI
 
 on:
   push:
@@ -10,8 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  Card-service:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +18,7 @@ jobs:
         java-version: 11
     - name: Build with Maven
       working-directory: ./card-service
-      run: mvn -B package --file pom.xml
+      run: mvn package -Dmaven.test.skip=true --file pom.xml
     - name: Test with Maven
       working-directory: ./card-service
       run: mvn test
