--- a/.github/workflows/card-service.yml
+++ b/.github/workflows/card-service.yml
@@ -18,7 +18,7 @@ jobs:
         java-version: 11
     - name: Build with Maven
       working-directory: ./card-service
-      run: mvn package -Dmaven.test.skip=true --file pom.xml
+      run: mvn -B package -Dmaven.test.skip=true --file pom.xml
     - name: Test with Maven
       working-directory: ./card-service
-      run: mvn test
+      run: mvn -B test
