--- a/card-service/pom.xml
+++ b/card-service/pom.xml
@@ -79,6 +79,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+            <version>3.3.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
