--- a/card-service/src/main/resources/application.properties
+++ b/card-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8101
 spring.application.name=card-service
 server.servlet.context-path=/api
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/card-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/cardservice
 spring.datasource.username=jelle
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
