--- a/card-service/pom.xml
+++ b/card-service/pom.xml
@@ -73,6 +73,8 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>1.4.194</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
