--- a/.github/workflows/card-service.yml
+++ b/.github/workflows/card-service.yml
@@ -21,4 +21,4 @@ jobs:
       run: mvn -B package -Dmaven.test.skip=true --file pom.xml
     - name: Test with Maven
       working-directory: ./card-service
-      run: mvn -B test
+      run: mvn -B test --file pom.xml
