--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,3 +1,15 @@
-server.port=8100
 spring.application.name=gateway-service
-server.servlet.context-path=/api
+server.port=8762
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+# zuul.prefix=/api
+zuul.ignored-services=*
+
+zuul.routes.gallery-service.path=/cards/**
+zuul.routes.gallery-service.service-id=card-service
+
+zuul.routes.auth-service.path=/auth/**
+zuul.routes.auth-service.service-id=AUTH-SERVICE
+zuul.routes.auth-service.strip-prefix=false
+
+zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
