--- a/card-service/src/main/resources/application.properties
+++ b/card-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8101
 spring.application.name=card-service
-server.servlet.context-path=/api
+server.port=8100
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/cardservice
 spring.datasource.username=jelle
