Add JWT functionality to auth service

--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -13,3 +13,6 @@ zuul.routes.auth-service.service-id=AUTH-SERVICE
 zuul.routes.auth-service.strip-prefix=false
 
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
+
+zuul.host.max-per-route-connections=50
+zuul.host.max-total-connections=10000
