Add User database retrieval

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=auth-service
 server.port=9100
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:postgresql://localhost:5432/authservice
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driverClassName=org.postgresql.Driver
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
