--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=gateway-service
 server.port=8762
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+# Eureka config
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+# Zuul config
 zuul.prefix=/api
 zuul.ignored-services=*
 zuul.routes.gallery-service.path=/card-service/**
