--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=auth-service
 server.port=9100
+# Eureka config
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/authservice
 spring.datasource.username=postgres
