--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -13,3 +13,4 @@ zuul.routes.gallery-service.service-id=card-service
 zuul.routes.auth-service.path=/auth-service/**
 zuul.routes.auth-service.service-id=auth-service
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
+ribbon.eager-load.enabled=true
