--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -14,3 +14,5 @@ zuul.routes.auth-service.path=/auth-service/**
 zuul.routes.auth-service.service-id=auth-service
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
 ribbon.eager-load.enabled=true
+# Actuator
+management.endpoints.web.exposure.include=health,routes
