--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -7,18 +7,54 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - 
+      uses: actions/checkout@v2
+      
+    - 
+      name: Set up JDK 11
       uses: actions/setup-java@v1.4.3
       with:
         java-version: 11
-    - name: Build with Maven
+        
+    - 
+      name: Build with Maven
       working-directory: ./auth-service
       run: mvn -B package -Dmaven.test.skip=true --file pom.xml
-    - name: Test with Maven
+      
+    - 
+      name: Test with Maven
       working-directory: ./auth-service
       run: mvn -B test
+
+  docker:
+    runs-on: ubuntu-latest
+
+    steps:
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+      -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: user/app:latest
+          file: ./auth-service/Dockerfile
+      -
+        name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
