--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -1,4 +1,4 @@
-name: Auth Service CI
+name: Auth Service
 
 on:
   push:
@@ -34,6 +34,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - 
+        uses: actions/checkout@v2
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -52,8 +54,9 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: ./auth-service/
           push: true
-          tags: user/app:latest
+          tags: ghcr.io/user/app:latest
           file: ./auth-service/Dockerfile
       -
         name: Image digest
