--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -31,7 +31,9 @@ jobs:
       run: mvn -B test
 
   docker:
+    name: Build and publish to GitHub Container Registry
     runs-on: ubuntu-latest
+    needs: [build]
 
     steps:
       - 
