--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Build, test and upload artifact.
     runs-on: ubuntu-latest
 
     steps:
@@ -29,37 +30,43 @@ jobs:
       name: Test with Maven
       working-directory: ./auth-service
       run: mvn -B test
-
+    
+    - 
+      name: Create artifact with Maven
+      working-directory: ./auth-service
+      run: mvn -B clean package --file pom.xml
+    - 
+      name: Move file
+      working-directory: ./auth-service
+      run: mkdir deployment && cp target/*.jar deployment
+    - 
+      name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: Package
+        path: ./auth-service/deployment
+        
   docker:
-    name: Build and publish to GitHub Container Registry
+    name: Download artifact, build docker image and push to registry.
     runs-on: ubuntu-latest
     needs: [build]
-
-    steps:
-      - 
-        uses: actions/checkout@v2
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: ./auth-service/
-          push: true
-          tags: ghcr.io/user/app:latest
-          file: ./auth-service/Dockerfile
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+    
+    steps: 
+    -
+      name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.CR_PAT }}
+          
+    - 
+      name: Build and push Docker images
+      uses: docker/build-push-action@v2.2.0
+      with:
+        # Path to the Dockerfile
+        file: ./auth-service/Dockerfile
+        # Push is a shorthand for --output=type=registry
+        push: true
+        tags: jellehuibregste/cah-auth:latest
+        target: ./auth-service/deployment
