--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -72,9 +72,9 @@ jobs:
       name: Build and push Docker images
       uses: docker/build-push-action@v2.2.0
       with:
+        context: ./auth-service/Dockerfile
         # Path to the Dockerfile
         file: ./auth-service/Dockerfile
         # Push is a shorthand for --output=type=registry
         push: true
         tags: jellehuibregste/cah-auth:latest
-        target: ./auth-service/deployment
