--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -67,12 +67,15 @@ jobs:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.CR_PAT }}
-          
+        
+    - 
+      name: Download a Build Artifact
+      uses: actions/download-artifact@v2.0.6
+        
     - 
       name: Build and push Docker images
       uses: docker/build-push-action@v2.2.0
       with:
-        context: ./auth-service
         # Path to the Dockerfile
         file: ./auth-service/Dockerfile
         # Push is a shorthand for --output=type=registry
