--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -71,11 +71,14 @@ jobs:
     - 
       name: Download a Build Artifact
       uses: actions/download-artifact@v2.0.6
+      with:
+        path: ./auth-service/
         
     - 
       name: Build and push Docker images
       uses: docker/build-push-action@v2.2.0
       with:
+        registry: ghcr.io
         # Path to the Dockerfile
         file: ./auth-service/Dockerfile
         # Push is a shorthand for --output=type=registry
