--- a/card-service/src/main/resources/application.yml
+++ b/card-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/auth-service
+    url: jdbc:postgresql://localhost:5432/card-service
     username: postgres
     password: admin
     driver-class-name: org.postgresql.Driver
