--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -10,8 +10,8 @@
     </parent>
     <groupId>com.jellehuibregtse.cah</groupId>
     <artifactId>discovery-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>discovery-server</name>
+    <version>0.0.1</version>
+    <name>Discovery Server</name>
     <description>The discovery server for all microservices</description>
 
     <properties>
@@ -31,27 +31,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1.1</version>
         </dependency>
 
         <dependency>
