--- a/.github/workflows/gateway-service-feature.yml
+++ b/.github/workflows/gateway-service-feature.yml
@@ -3,8 +3,10 @@ name: Gateway Service CI – Feature Branch
 on:
   push:
     branches-ignore: 
-      - 'main'
-      - 'release*'
+      - main
+      - release*
+    paths:
+      - gateway-service/**
 
 jobs:
   test:
