--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8761
+
 eureka:
   client:
     register-with-eureka: false
@@ -7,3 +8,9 @@ eureka:
   server:
     wait-time-in-ms-when-sync-empty: 5
     renewal-percent-threshold: 0.85
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,routes,info
