--- a/.github/workflows/discovery-server-main.yml
+++ b/.github/workflows/discovery-server-main.yml
@@ -50,8 +50,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
       - name: Build Docker image
         working-directory: ./discovery-server
         run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
