--- a/.github/workflows/auth-service-cd.yml
+++ b/.github/workflows/auth-service-cd.yml
@@ -1,4 +1,4 @@
-name: Auth Service CI - Main Branch
+name: Auth Service CD
 
 on:
   push:
@@ -8,8 +8,8 @@ on:
       - auth-service/**
 
 jobs:
-  test:
-    name: Test - Units & Integrations
+  build:
+    name: Build and test
     runs-on: ubuntu-latest
 
     steps:
@@ -23,28 +23,12 @@ jobs:
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
         working-directory: ./auth-service
-        run: mvn -B clean verify -Pintegration-test
-
-  sonar:
-    name: SonarCloud Scan
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1.4.3
-        with:
-          java-version: 11
-      - name: SonarCloud Scan
-        working-directory: ./auth-service
-        run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: mvn -B clean verify
           
   docker:
-    name: Publish - Docker Hub
+    name: Publish to Docker Hub
     runs-on: ubuntu-18.04
-    needs: [test, sonar]
+    needs: [build]
     env:
       REPO: ${{ secrets.DOCKER_REPO_AUTH_SERVICE }}
 
