--- a/.github/workflows/auth-service-ci.yml
+++ b/.github/workflows/auth-service-ci.yml
@@ -54,5 +54,5 @@ jobs:
         working-directory: ./auth-service
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_AUTH_SERVICE }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
