--- a/.github/workflows/discovery-server-cd.yml
+++ b/.github/workflows/discovery-server-cd.yml
@@ -1,4 +1,4 @@
-name: Discovery Server CI - Main Branch
+name: Discovery Server Service CD
 
 on:
   push:
@@ -8,8 +8,8 @@ on:
       - discovery-server/**
 
 jobs:
-  test:
-    name: Test - Units & Integrations
+  build:
+    name: Build and test
     runs-on: ubuntu-latest
 
     steps:
@@ -23,30 +23,14 @@ jobs:
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
         working-directory: ./discovery-server
-        run: mvn -B clean verify -Pintegration-test
-
-  sonar:
-    name: SonarCloud Scan
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1.4.3
-        with:
-          java-version: 11
-      - name: SonarCloud Scan
-        working-directory: ./discovery-server
-        run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        run: mvn -B clean verify
+          
   docker:
-    name: Publish - Docker Hub
+    name: Publish to Docker Hub
     runs-on: ubuntu-18.04
-    needs: [test, sonar]
+    needs: [build]
     env:
-      REPO: ${{ secrets.DOCKER_REPO_DISCOVERY_SERVER }}
+      REPO: ${{ secrets.DOCKER_REPO_DISCOVERY_SERVER}}
 
     steps:
       - uses: actions/checkout@v1
