--- a/.github/workflows/auth-service-cd.yml
+++ b/.github/workflows/auth-service-cd.yml
@@ -24,11 +24,40 @@ jobs:
       - name: Maven Verify
         working-directory: ./auth-service
         run: mvn -B clean verify
+  
+  sonar:
+    name: SonarCloud Scan
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1.4.3
+        with:
+          java-version: 11
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        working-directory: ./auth-service
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_AUTH_SERVICE }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
           
   docker:
     name: Publish to Docker Hub
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build, sonar]
     env:
       REPO: ${{ secrets.DOCKER_REPO_AUTH_SERVICE }}
 
