Update path for Client CI

--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -6,7 +6,7 @@ on:
       - main
       - release*
     paths:
-      - card-service/**
+      - client/**
   pull_request:
     types: [opened, synchronize, reopened]
     
