--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -15,19 +15,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-      working-directory: ./client
-    - run: npm run build --if-present
-      working-directory: ./client
+        node-version: '12'
+    - run: npm install
     - run: npm test
-      working-directory: ./client
