--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -21,4 +21,6 @@ jobs:
       with:
         node-version: '12'
     - run: npm install
+      working-directory: ./client
     - run: npm test
+      working-directory: ./client
