Revert "Update client-ci.yml"
This reverts commit ae12badf26ae40cda11224fe1306f04fb8616532.

--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -22,5 +22,5 @@ jobs:
         node-version: '12'
     - run: npm install
       working-directory: ./client
-    - run: npm test --passWithNoTests
+    - run: npm test
       working-directory: ./client
