--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
     "@chakra-ui/react": "^1.0.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@testing-library/jest-dom": "^5.9.0",
@@ -18,8 +16,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^3.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.2"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
