--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -11,8 +11,8 @@ on:
     types: [opened, synchronize, reopened]
     
 jobs:
-  build:
-
+  test:
+    name: Build and test
     runs-on: ubuntu-latest
 
     steps:
