--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -25,3 +25,13 @@ zuul:
   ribbon:
     eager-load:
       enabled: true
+  host:
+    connect-timeout-millis: 10000
+    socket-timeout-millis: 60000
+  ignored-services: *
+
+ribbon:
+  eager-load:
+    enabled: true
+  restclient:
+    enabled: true
