--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -25,8 +25,8 @@ zuul:
   host:
     connect-timeout-millis: 10000
     socket-timeout-millis: 60000
-  ignored-services: *
   sensitive-headers: Cookie,Set-Cookie
+  ignored-services: "*"
 
 ribbon:
   eager-load:
